experimental version  - checkpoint in case I mess up